--- a/page/templates/page/splash-page.html
+++ b/page/templates/page/splash-page.html
@@ -108,8 +108,7 @@
                         &nbsp;&nbsp;&nbsp;
                         <div class="input-group-prepend">
                           <select class="custom-select" id="type" name="type">
-                              <option selected value="%">Categories</option>
-                              <option value="%">All</option>
+                              <option selected value="%">All clubs</option>
                             <option value="17">A Cappella</option>
                             <option value="5">Academic</option>
                             <option value="6">Career Opportunity</option>
@@ -162,6 +161,19 @@
 
         </div>
       </div>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <footer class="py-5 bg-dark">
+      <div class="container">
+        <p class="m-0 text-center text-white">Copyright &copy; Your Website 2018</p>
+      </div>
+      <!-- /.container -->
+      </footer>
 
     
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
