--- a/page/templates/page/post_detail2.html
+++ b/page/templates/page/post_detail2.html
@@ -245,7 +245,8 @@
       <div class="jumbotron">
         <div class="row">
           <div class="col-sm-12 my-12">
-            <center><h2>Are you a leader of {{club.name}}? Edit your club's information <a href="{% url 'edit_page' pk=club.pk %}" class="btn btn-primary"><h3>here!</h3></a></h2></center>
+            <center><h2>Are you a leader of {{club.name}}? Edit your club's information <a href="{% url 'edit_page' pk=club.pk %}" class="btn btn-primary"><h3>here!</h3></a>
+            </h2></center>
           </div>
         </div>
       </div>
