--- a/page/templates/page/post_detail2.html
+++ b/page/templates/page/post_detail2.html
@@ -88,7 +88,7 @@
               <a class="btn btn-primary btn-lg" href="{% url 'all_reviews' pk=club.pk %}">Check out our reviews!</a>
             </p>
             <form method="POST" class="post-form">{% csrf_token %}
-              <button type="submit" class="btn btn-primary btn-md" name="interest" value="interest">I'm Interested!</button>
+              <button type="submit" class="btn btn-primary btn-md" name="interest" value="interest">Click here to let us know you're interested!</button>
           </form>
           </div>
           <div class="col-sm-4">
@@ -292,7 +292,8 @@
       <div class="jumbotron">
         <div class="row">
           <div class="col-sm-12 my-12">
-            <center><h2>Are you a leader of {{club.name}}? Edit your club's information <a href="{% url 'edit_page' pk=club.pk %}" class="btn btn-primary"><h3>here!</h3></a>
+            <center><h2>Are you a leader of {{club.name}}?</h2>
+            <h2>Edit your club's information <a href="{% url 'edit_page' pk=club.pk %}" class="btn btn-primary"><h3>here!</h3></a>
             <center><h2>See who is interested in your club <a href="{% url 'interest_page' pk=club.pk %}" class="btn btn-primary"><h3>here!</h3></a>
             </h2></center>
           </div>
