--- a/page/templates/page/interest.html
+++ b/page/templates/page/interest.html
@@ -10,7 +10,7 @@
           <div class="col-sm-12">
             <center>
               <h1><u>We're Interested!</u></h1>
-              <p>Below is a list of the emails of students who have expressed interest in your club! Feel free to reach out to them and add them to your listserv!</p>
+              <p>Below is a list of the emails of students who have expressed interest in your club. Feel free to reach out to them and add them to your listserv!</p>
             </center>
           </div>
         </div>
