--- a/page/templates/page/post_detail2.html
+++ b/page/templates/page/post_detail2.html
@@ -19,46 +19,51 @@
 
     <!-- Page Content -->
     <div class="container">
+      {% if count != 0 %}
+        <br>
+        <div class="row">
+          <br>
+          {% if count == 3 %}
+          <div class="col-sm-4">
 
-      <div class="row">
-        {% if count == 3 %}
-        <div class="col-sm-4 my-4">
+              <img class="img-thumbnail" src="{{photo1.url}}" alt="">
 
-            <img class="img-thumbnail" src="{{photo1.url}}" alt="">
+          </div>
+          <div class="col-sm-4">
 
+              <img class="img-thumbnail" src="{{photo2.url}}" alt="">
+
+          </div>
+          <div class="col-sm-4">
+
+              <img class="img-thumbnail" src="{{photo3.url}}" alt="">
+
+          </div>
+          {% elif count == 2 %}
+          <div class="col-sm-6">
+            <center>
+              <img class="img-thumbnail-two" src="{{photo1.url}}" alt="">
+            </center>
+          </div>
+          <div class="col-sm-6">
+            <center>
+              <img class="img-thumbnail-two" src="{{photo2.url}}" alt="">
+            </center>
+          </div>
+          {% elif count == 1 %}
+
+          <div class="col-sm-12">
+            <center>
+              <img class="img-thumbnail-cover" src="{{photo1.url}}" alt="">
+            </center>
+          </div>
+          {% else %}
+          <div class="col-sm-12 my-4">
+          </div>
+          {% endif %}
         </div>
-        <div class="col-sm-4 my-4">
-
-            <img class="img-thumbnail" src="{{photo2.url}}" alt="">
-
-        </div>
-        <div class="col-sm-4 my-4">
-
-            <img class="img-thumbnail" src="{{photo3.url}}" alt="">
-
-        </div>
-        {% elif count == 2 %}
-        <div class="col-sm-6 my-4">
-
-            <img class="img-thumbnail" src="{{photo1.url}}" alt="">
-
-        </div>
-        <div class="col-sm-6 my-4">
-
-            <img class="img-thumbnail" src="{{photo2.url}}" alt="">
-
-        </div>
-        {% elif count == 1 %}
-        <div class="col-sm-12 my-4">
-
-            <img class="img-thumbnail" src="{{photo1.url}}" alt="">
-
-        </div>
-        {% else %}
-        <div class="col-sm-12 my-4">
-        </div>
-        {% endif %}
-      </div>
+      {% endif %}
+      <br>
       <div class="body1">
         <div class="jumbotron">
         <div class="row">
@@ -86,10 +91,8 @@
             <p>{{club.desc}}</p>
             <p>
               <a class="btn btn-primary btn-lg" href="{% url 'all_reviews' pk=club.pk %}">Check out our reviews!</a>
+              <a class="btn btn-primary btn-lg" href="#">Check out our interviews!</a>
             </p>
-            <form method="POST" class="post-form">{% csrf_token %}
-              <button type="submit" class="btn btn-primary btn-md" name="interest" value="interest">Click here to let us know you're interested!</button>
-          </form>
           </div>
           <div class="col-sm-4">
             <h2 class="mt-4">Club info</h2>
@@ -106,10 +109,16 @@
                   <br>{{ club.category.all|join:", " }}<br>
               {% endif %}
               <br>
-              <a href="{{club.email|mail}}" class="btn btn-primary">Contact us!</a>
+              <a href="{{club.email|mail}}" class="btn btn-primary">&nbsp;&nbsp;&nbsp;&nbsp;Contact us!&nbsp;&nbsp;&nbsp;&nbsp;</a>
               {% if club.website %}
-                  <a class="btn btn-primary" href= {{ club.website }}>Website</a>
+                  <a class="btn btn-primary" href= {{ club.website }}>&nbsp;&nbsp;&nbsp;&nbsp;Website&nbsp;&nbsp;&nbsp;&nbsp;</a>
               {% endif %}
+              <br>
+              <br>
+              <form method="POST" class="post-form">{% csrf_token %}
+                
+                <button type="submit" class="btn btn-warning btn-md btn-block" name="interest" value="interest">Express interest!</button>
+              </form>
             </address>
           </div>
         </div>
@@ -255,6 +264,12 @@
                 </center>
                 {% endif %}
 
+                {% if review1 == None and review2 == None %}
+                  <center>
+                    <h5>This club has no reviews. Add one above!</h5>
+                  </center>
+                {% endif %}
+
               <center>
                 {% if messages %}
                   <script>
@@ -292,13 +307,16 @@
       <div class="jumbotron">
         <div class="row">
           <div class="col-sm-12 my-12">
-            <center><h2>Are you a leader of {{club.name}}?</h2>
-            <h2>Edit your club's information <a href="{% url 'edit_page' pk=club.pk %}" class="btn btn-primary"><h3>here!</h3></a>
+            <center><h2><u>Are you a leader of {{club.name}}?</u></h2>
+            <br>
+            <h2>Edit your club's information <a href="{% url 'edit_page' pk=club.pk %}" class="btn btn-primary"><h3>here!</h2></h3></a>
+            <br>
             <center><h2>See who is interested in your club <a href="{% url 'interest_page' pk=club.pk %}" class="btn btn-primary"><h3>here!</h3></a>
             </h2></center>
           </div>
         </div>
       </div>
+
       <!-- /.row -->
 
       <br>
