--- a/page/templates/page/post_edit.html
+++ b/page/templates/page/post_edit.html
@@ -13,6 +13,7 @@
 			</div>
 		</div>
 		<br>
+		<form method="POST" class="post-form">{% csrf_token %}
 		<div class="row">
 			<div class="col-sm-12">
 				<div class="jumbotron">
@@ -27,8 +28,17 @@
 		<div class="row">
 			<div class="col-sm-6">
 				<div class="jumbotron">
-
+					<p>Is {{club.name}} fun?</p>
+					<center>{{form.fun}}</center>
+					<br>
+					<p>Is {{club.name}} meaningful?</p>
+					<center>{{form.meaningful}}</center>
+					<br>
+					<p>Please rank {{club.name}} from 1-5 stars.</p>
+					<center>{{form.stars}}</center>
 				</div>
+
+			<center><button type="submit" class="btn btn-primary btn-lg">&nbsp;&nbsp;&nbsp;Submit me!&nbsp;&nbsp;&nbsp;</button></center>
 			</div>
 			<div class="col-sm-6">
 				<div class="jumbotron">
@@ -40,15 +50,8 @@
 				</div>
 			</div>
 		</div>
+		</form>
 		<br>
-		<div class="row">
-			<div class="col-sm-12">
-			    <form method="POST" class="post-form">{% csrf_token %}
-			        {{ form.as_p }}
-			        <button type="submit" class="save btn btn-default">Submit me!</button>
-			    </form>
-			</div>
-		</div>
 	</div>
 
 {% endblock %}
