--- a/page/templates/page/splash-page.html
+++ b/page/templates/page/splash-page.html
@@ -41,7 +41,7 @@
               <ul class="list-group list-group-flush">
                 <li class="list-group-item"></li>
                 <li class="list-group-item"><center><h4>Find a club</h4></center></li>
-                <li class="list-group-item">Use the search bar below to find any of Princeton's 600+ clubs!</li>
+                <li class="list-group-item">Use the search bar below to find any of Princeton's 300+ clubs!</li>
                 <li class="list-group-item"><center><h4>Not sure what you're looking for?<h4></h4></li>
                 <li class="list-group-item">You can use the toolbar to scroll through a certain category, or search for certain keywords such as club category, features, or leadership.</li>
                 <li class="list-group-item"><center><h4>Want a suggestion?</h4></center></li>
@@ -70,7 +70,10 @@
                       </a>
                     </li>
                     <li class="nav-item active">
-                      <a class="nav-link" href="/clublist">Clubs</a>
+                      <a class="nav-link" href="/clublist">All Clubs</a>
+                    </li>
+                    <li class="nav-item active">
+                      <a class="nav-link" href="/myclubs">My Clubs</a>
                     </li>
                     <li class="nav-item active">
                       <a class="nav-link" href="/top20">Top 20</a>
