--- a/page/templates/page/my_clubs.html
+++ b/page/templates/page/my_clubs.html
@@ -38,6 +38,7 @@
             </p>
             <p>
               <a class="btn btn-primary btn-lg" href="{% url 'edit_page' pk=club.pk %}">Edit my club!</a>
+              <a class="btn btn-primary btn-lg" href="{% url 'interest_page' pk=club.pk %}">See who is interested in my club!</a>
             </p>
           </div>
           <div class="col-sm-4">
