--- a/page/templates/page/club_edit.html
+++ b/page/templates/page/club_edit.html
@@ -18,6 +18,20 @@
         </div>
 
         <div class="row">
+          <div class="col-sm-3">
+          </div>
+          <div class="col-sm-6">
+            <center>
+              <button type="submit" class="btn btn-primary btn-lg btn-block">Submit Changes!</button>
+            </center>
+            <br>
+            <br>
+          </div>
+          <div class="col-sm-3">
+          </div>
+        </div>
+
+        <div class="row">
           <div class="col-sm-6">
             <div class="jumbotron">
               <center><h3>Basic info</h3></center>
@@ -111,9 +125,16 @@
         </div>
 
         <div class="row">
-          <div class="col-sm-12">
-
-            <button type="submit" class="save btn btn-default">Submit Changes!</button>
+          <div class="col-sm-3">
+          </div>
+          <div class="col-sm-6">
+            <center>
+              <button type="submit" class="btn btn-primary btn-lg btn-block">Submit Changes!</button>
+            </center>
+            <br>
+            <br>
+          </div>
+          <div class="col-sm-3">
           </div>
         </div>
       </div>
