--- a/page/templates/page/search_results.html
+++ b/page/templates/page/search_results.html
@@ -5,13 +5,54 @@
     <br>
 
     <div class="container">
-    {% if query %}
-        <p>You searched for: <strong>{{ query }}</strong></p>
-    {% endif %}
-    {% if clubs %}           
-        <p>Found {{ clubs|length }} club{{ clubs|pluralize }}.</p>               
-            {% for club in clubs %}               
-
+      <div class="row">
+        <div class="col-sm-3">
+          {% if query %}
+              <p>You searched for: <strong>{{ query }}</strong></p>
+          {% endif %}
+          {% if clubs %}           
+              <p>Found <b>{{ clubs|length }}</b> club{{ clubs|pluralize }}.</p>
+          {% endif %}            
+        </div>   
+        <div class="col-sm-9">
+          <form action="/search/" method="get">
+            <div class="input-group mb-3">
+              &nbsp;&nbsp;&nbsp;
+              <div class="input-group-prepend">
+                <select class="custom-select" id="type" name="type">
+                    <option selected value="%">All clubs</option>
+                  <option value="17">A Cappella</option>
+                  <option value="5">Academic</option>
+                  <option value="6">Career Opportunity</option>
+                  <option value="9">Cultural</option>
+                  <option value="14">Dance</option>
+                  <option value="4">Educational</option>
+                  <option value="10">Environmental</option>
+                  <option value="11">Games</option>
+                  <option value="2">Media</option>
+                  <option value="15">Music</option>
+                  <option value="13">Performing Arts</option>
+                  <option value="8">Political</option>
+                  <option value="1">Publication</option>
+                  <option value="18">Religious</option>
+                  <option value="7">Service</option>
+                  <option value="12">Social</option>
+                  <option value="3">Special Interest</option>
+                  <option value="16">Theater</option>
+                </select>
+              </div>
+              <input type="text" name = "q" class="form-control" aria-label="Text input with dropdown button">
+                  <div class="input-group-append">
+                  <button class="btn btn-outline-dark" type="submit" value = search>Search</button>
+              </div>
+              &nbsp;&nbsp;&nbsp;
+            </div>
+          </form>
+        </div>
+      </div>            
+      
+      {% if clubs %}
+      {% for club in clubs %} 
       <div class="body1">
         <div class="jumbotron">
         <div class="row">
